--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "Server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "node Server.js",
+    "start": "node Server.js",
     "dev": "nodemon Server.js"
   },
   "author": "vikas",
